finished social icons

--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
 					Relaxr
 				</div>
 
-				<div class="social">
-					<img src='./images/twitter.png'>
-					<img src='./images/facebook.png'>
-				</div>
+				<ul>
+					<li><img src='./images/twitter.png'></li>
+					<li><img src='./images/facebook.png'></li>
+				</ul>
 
 				<div class="copyright">
 					Copyright 2015. Relaxr.
